--- a/security/index.html
+++ b/security/index.html
@@ -1,9 +1,20 @@
 ---
 layout: default
-active_key: home
+title: 安全相关
+active_key: security
 ---
-<!-- links in homepage -->
-{% for section in site.data.home_links %}
+
+<!-- <div class="ui vertical stripe segment">
+    <div class="ui middle aligned stackable grid container">
+        <div class="row">
+            <div class="center aligned column">
+                <h3 class="ui header">您的每一次支持，都是开发者坚持的动力！</h3>
+                <p>如果您想自定义捐款数目，请扫描以下二维码。</p>
+            </div>
+        </div>
+    </div>
+</div> -->
+{% for section in site.data.security_links %}
     <div class="ui vertical stripe links segment">
         {% if forloop.first %}{% include page_loading_progress_bar.html %}{% endif %}
         <div class="ui equal width stackable internally celled grid">
