--- a/program/index.html
+++ b/program/index.html
@@ -5,18 +5,9 @@ style: pages
 active_key: program
 ---
 
-<!-- <div class="ui vertical stripe segment">
-    <div class="ui middle aligned stackable grid container">
-        <div class="row">
-            <div class="center aligned column">
-                <h3 class="ui header">您的每一次支持，都是开发者坚持的动力！</h3>
-                <p>如果您想自定义捐款数目，请扫描以下二维码。</p>
-            </div>
-        </div>
-    </div>
-</div> -->
 {% for section in site.data.program_links %}
     <div class="ui vertical stripe links segment">
+        {% if forloop.first %}{% include page_loading_progress_bar.html %}{% endif %}
         <div class="ui equal width stackable internally celled grid">
             <div class="center aligned row">
                 {% for item in section.categories %}
@@ -31,3 +22,14 @@ active_key: program
         </div>
     </div>
 {% endfor %}
+
+<!-- <div class="ui vertical stripe segment">
+    <div class="ui middle aligned stackable grid container">
+        <div class="row">
+            <div class="center aligned column">
+                <h3 class="ui header"></h3>
+                <p></p>
+            </div>
+        </div>
+    </div>
+</div> -->
